test/cases/compile_errors/implicit_semicolon-block_statement.zig
export fn entry() void {
    {}
    var good = {};
    ({})
    var bad = {};
}

// error
// backend=stage2
// target=native
//
// :4:9: error: expected ';' after statement
